[package]
name = "proof"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prover-primitives = { workspace = true, features = ["std"] }
attestor-primitives = { workspace = true, features = ["std"] }
pallet-attestation-poc = { workspace = true, features = ["std"] }
starknet-crypto = "0.6.1"
anyhow = "1.0.68"
serde = "1.0.193"
serde_json = "1.0.117"
tokio = { version = "1.34.0", features = ["process", "fs"] }
futures = "0.3.30"
mmr = { workspace = true }
ethereum = "0.15.0"
attestor = { path = "../attestor" }
tracing = "0.1.40"
thiserror = "1.0"
eth-common = { path = "../common/eth", package = "eth" }
attestation-chain = { path = "../primitives/attestation_chain" }
alloy = { git = "https://github.com/alloy-rs/alloy", features = [
    "node-bindings",
    "providers",
    "provider-http",
    "provider-ws",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "serde",
    "consensus",
    "rlp",
] }
tempfile = "3.10.1"
utils = { path = "../common/utils", default-features = false}
either = "1.12.0"
ethereum-types.workspace = true
colored = "2.1.0"
rlp = "0.5.2"
fs2 = "0.4.3"

[dev-dependencies]
attestation-db = { path = "../attestation-db"}
