[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "proof"
publish.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
attestation-chain = { path = "../primitives/attestation_chain" }
#attestor = { path = "../attestor" }
colored = "2.1.0"
either = "1.12.0"
eth-common = { path = "../common/eth", package = "eth" }
ethereum = "0.15.0"
ethereum-types.workspace = true
fs2 = "0.4.3"
futures = "0.3.30"
mmr = { workspace = true }
rlp = "0.5.2"
serde = "1.0.193"
serde_json = "1.0.117"
starknet-crypto = { workspace = true }
tempfile = "3.10.1"
thiserror = "1.0"
#tokio = { version = "1.34.0", features = ["process", "fs"] }
tokio = { workspace = true, features = ["fs", "process", "rt-multi-thread"] }

tracing = "0.1.40"
utils = { path = "../common/utils", default-features = false }

attestor-primitives = { workspace = true, features = ["std"] }
pallet-attestation-poc = { workspace = true, features = ["std"] }
prover-primitives = { workspace = true, features = ["std"] }

[dev-dependencies]
attestation-db = { path = "../attestation-db" }
block-cache = { path = "../block-cache" }
hashbrown = { version = "0.14.5", default-features = false }
poc-config = { path = "../poc-config" }
