[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "proof"
publish.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1"
either = "1.12"
fs2 = "0.4"
rlp = "0.5"
tempfile = "3.10"

# Workspace dependencies
anyhow = { workspace = true }
ethereum = { workspace = true }
ethereum-types = { workspace = true }
futures = { workspace = true }
mmr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
starknet-crypto = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "rt-multi-thread"] }
tracing = { workspace = true }

# Common dependencies
eth-common = { path = "../common/eth", package = "eth" }
utils = { path = "../common/utils", default-features = false }

# Primitive dependencies
attestation-chain = { workspace = true }
attestor-primitives = { workspace = true, features = ["std"] }
pallet-attestation-poc = { workspace = true, features = ["std"] }
prover-primitives = { workspace = true, features = ["std"] }
