[package]
name = "prover-attestation-db-online-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
rand = "0.8.5"
anyhow = "1.0.68"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3.30"
serde = "1.0.193"
serde_json = "1.0.108"
#ethers = { version = "2.0.14", features = ["ws"] }
core_affinity = "0.8.1"
chrono = "0.4.34"
stacker = "0.1.15"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.1.0"
fs_extra = "1.3.0"
futures-util = "0.3.30"

utils = { path = "../common/utils" }
attestation-chain = { path = "../primitives/attestation_chain" }
attestation-db = { path = "../attestation-db" }
attestation-blocks-online-builder = { path = "../attestation-blocks-online-builder" }
proof = { path = "../proof" }
prover-primitives = { path = "../primitives/prover" }
eth-common = { path = "../common/eth", package = "eth" }
poc-config = { path = "../poc-config" }
ethereum-types = "0.14.1"
either = "1.12.0"
rlp = "0.5.2"
