[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "prover-attestation-db-online-builder"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
futures = "0.3.30"
rand = "0.8.5"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
#ethers = { version = "2.0.14", features = ["ws"] }
chrono = "0.4.34"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.1.0"
core_affinity = "0.8.1"
fs_extra = "1.3.0"
futures-util = "0.3.30"
stacker = "0.1.15"

attestation-blocks-online-builder = { path = "../attestation-blocks-online-builder" }
attestation-chain = { path = "../primitives/attestation_chain" }
attestation-db = { path = "../attestation-db" }
either = "1.12.0"
eth-common = { path = "../common/eth", package = "eth" }
ethereum-types = "0.14.1"
poc-config = { path = "../poc-config" }
proof = { path = "../proof" }
prover-primitives = { path = "../primitives/prover" }
rlp = "0.5.2"
utils = { path = "../common/utils" }
