[package]
name = "prover"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "bin/prover.rs"
name = "prover"

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
no_effect_underscore_binding = "allow"
redundant_slicing = "allow"
from_over_into = "allow"

[package.metadata.release]
release = false

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.81"
thiserror = "1.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = "0.8.4"
toml = "0.8.13"
tokio = { version = "1.37.0", features = ["signal", "fs"] }
clap = { version = "4.4.18", features = ["derive", "deprecated"] }

# Eth
alloy = { git = "https://github.com/alloy-rs/alloy", features = [
    "node-bindings",
    "providers",
    "provider-http",
    "provider-ws",
    "rpc-client",
    "rpc-types",
    "rpc-types-eth",
    "serde",
    "consensus",
    "rlp",
] }

# Substrate
sp-core = { version = "21.0.0", git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch", default-features = false }
pallet-evm = { workspace = true, default-features = false }

# Creditcoin deps
attestor-primitives = { path = "../primitives/attestor" }
cc-client = { workspace = true }
