[package]
edition = "2021"
license = "MIT"
name = "prover"
publish = false
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "prover"
path = "bin/prover.rs"

[lints.clippy]
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
enum_variant_names = "allow"
from_over_into = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
no_effect_underscore_binding = "allow"
pedantic = "warn"
redundant_slicing = "allow"

[package.metadata.release]
release = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "deprecated"] }
diesel = { version = "2.1", features = ["postgres"] }
diesel-async = { version = "0.4", features = [
    "postgres",
    "deadpool",
    "async-connection-wrapper",
    "tokio",
] }
diesel_migrations = "2.1"
either = "1.13.0"
futures = { workspace = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
starknet-types-core = { workspace = true }
thiserror = "1.0"
tokio = { version = "1.37", features = ["signal", "fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Substrate
pallet-evm = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }

# Creditcoin deps
attestation-chain = { workspace = true }
attestor-primitives = { workspace = true }
cc-client = { workspace = true }
eth = { workspace = true }
mmr = { workspace = true }
proof = { workspace = true }
pallet-prover-primitives = { workspace = true }
prover-primitives = { workspace = true }
serde_json.workspace = true
utils = { workspace = true }
