[package]
edition = "2021"
license = "MIT"
name = "query-cli"
publish = false
version = "0.1.0"

[package.metadata.release]
release = false

[dependencies]
alloy = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

eth = { workspace = true }

anyhow.workspace = true
ccnext-abi-encoding = { workspace = true }
ccnext-query-builder = { workspace = true }
pallet-prover-primitives = { workspace = true }
utils = { path = "../common/utils" }
