[package]
description = "Creditcoin3 Runtime"
name = "creditcoin3-runtime"

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
smallvec = "1.13.2"

# Substrate
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
# Substrate FRAME
frame-benchmarking = { workspace = true, optional = true }
frame-election-provider-support = { workspace = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-authorship = { workspace = true }
pallet-babe = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-balances = { workspace = true, features = ["insecure_zero_ed"] }
pallet-fast-unstake = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-identity = { workspace = true }
pallet-im-online = { workspace = true }
pallet-nomination-pools = { workspace = true }
pallet-nomination-pools-runtime-api = { workspace = true }
pallet-offences = { workspace = true }
pallet-proxy = { workspace = true }
pallet-session = { workspace = true }
pallet-staking = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-utility = { workspace = true }

log = { workspace = true }
# Frontier
fp-account = { workspace = true }
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde"] }

# Frontier FRAME
pallet-base-fee = { workspace = true }
pallet-dynamic-fee = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-hotfix-sufficients = { workspace = true }

# Tracing
creditcoin3-evm-tracer = { workspace = true, optional = true }
creditcoin3-rpc-primitives-debug = { workspace = true }

# Gluwa
pallet-attestation-poc = { workspace = true }
pallet-prover = { workspace = true }
pallet-supported-chains = { workspace = true }
pallet-prover = { workspace = true }
pallet-randomness = { workspace = true }

attestor-primitives = { workspace = true }
supported-chains-primitives = { workspace = true }
randomness-primitives = { workspace = true }
pallet-evm-precompile-claim = { workspace = true }
pallet-evm-precompile-substrate-transfer = { workspace = true }
supported-chains-primitives = { workspace = true }
#rlp = "0.5.2"

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
devnet = []
fast-runtime = []
runtime-benchmarks = [
    "pallet-attestation-poc/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-election-provider-support/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-attestation-poc/runtime-benchmarks",
    "pallet-babe/runtime-benchmarks",
    "pallet-bags-list/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-fast-unstake/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
    "pallet-im-online/runtime-benchmarks",
    "pallet-nomination-pools/runtime-benchmarks",
    "pallet-offences/runtime-benchmarks",
    "pallet-staking/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-supported-chains/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
    "pallet-evm/runtime-benchmarks",
    "pallet-hotfix-sufficients/runtime-benchmarks",
    "pallet-prover/runtime-benchmarks",
    "pallet-supported-chains/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "sp-staking/runtime-benchmarks",
]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    # Substrate
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-babe/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "substrate-wasm-builder",
    # Substrate FRAME
    "frame-benchmarking/std",
    "frame-election-provider-support/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system-benchmarking?/std",
    "pallet-attestation-poc/std",
    "pallet-authorship/std",
    "pallet-babe/std",
    "pallet-bags-list/std",
    "pallet-balances/std",
    "pallet-fast-unstake/std",
    "pallet-grandpa/std",
    "pallet-identity/std",
    "pallet-im-online/std",
    "pallet-nomination-pools/std",
    "pallet-nomination-pools-runtime-api/std",
    "pallet-offences/std",
    "pallet-prover/std",
    "pallet-randomness/std",
    "pallet-proxy/std",
    "pallet-session/std",
    "pallet-staking/std",
    "pallet-sudo/std",
    "pallet-supported-chains/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-utility/std",
    # Frontier
    "fp-evm/std",
    "fp-rpc/std",
    "fp-self-contained/std",
    "fp-account/std",
    # Frontier FRAME
    "pallet-base-fee/std",
    "pallet-dynamic-fee/std",
    "pallet-ethereum/std",
    "pallet-evm/std",
    "pallet-evm-chain-id/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-simple/std",
    "pallet-hotfix-sufficients/std",
    "creditcoin3-evm-tracer/std",
    "creditcoin3-rpc-primitives-debug/std",
    "attestor-primitives/std",
    "supported-chains-primitives/std",
    "randomness-primitives/std",
    "pallet-evm-precompile-claim/std",
    "pallet-evm-precompile-substrate-transfer/std",
    "log/std",
]
