[package]
edition = "2021"
license = "MIT"
name = "usc_audit_automation"
version = "0.1.0"

[[bin]]
name = "usc_audit_automation"
path = "bin/sanities_checker.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
dotenv = "0.15"
ethers = "2"
ethers-contract = "2"
ethers-core = "2"
ethers-providers = "2"
mockall = "0.11"
num-format = "0.4"
toml = "0.9"
tracing-subscriber = { workspace = true }

# Subxt
subxt = { version = "0.40", features = ["reconnecting-rpc-client"] }
subxt-signer = "0.40"

# Common deps
merkle = { path = "../common/merkle" }

# Creditcoin deps
attestor-primitives = { workspace = true }
cc-client = { workspace = true }
pallet-supported-chains = { workspace = true }

# Workspace deps
alloy = { workspace = true }
ccnext-abi-encoding = { workspace = true }
clap = { workspace = true }
eth = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
parity-scale-codec = { workspace = true, default-features = false }
reqwest = { workspace = true }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
sp-core = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tracing = { workspace = true }
utils = { workspace = true, default-features = false }

[dev-dependencies]
hex-literal = { workspace = true }
