[package]
name = "verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
bls-signatures = { version = "0.15.0" }
bls12_381 = "0.8.0"
bls_on_arkworks = "0.3.0"
blst = "0.3.11"
pairing = "0.23.0"
parity-scale-codec = { version = "3.6.9", features = ["derive"] }
rand = "0.8.5"
rayon = "1.8.0"
sp-core = "27.0.0"
#attestor = { path = "../attestor" }

[dev-dependencies]
criterion = "0.5.1"
typed-builder = "0.18.0"
