[package]
name = "attestor"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "attestor"
path = "./src/lib.rs"

[[bin]]
name = "attestor"
path = "./src/main.rs"

[dependencies]
# Ethereum
alloy = { workspace = true, features = ["full"] }
eth = { workspace = true, default-features = true }

# Creditcoin
attestor-primitives = { workspace = true }
bip39 = { workspace = true }
bls-signatures = { workspace = true }
builder = { workspace = true }
cc-client = { workspace = true }
stream = { workspace = true }
supported-chains-primitives = { workspace = true }
usc-abi-encoding = { workspace = true }

# Substrate
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
subxt = { workspace = true }

# Async & Parallelism
async-stream = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-retry = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["url"] }

# P2P
libp2p = { workspace = true, features = [
    "tokio",
    "macros",
    "ed25519",
    "dns",
    "quic",
    "tcp",
    "noise",
    "yamux",
    "identify",
    "ping",
    "mdns",
    "kad",
    "gossipsub",
] }

# Parsing
clap = { workspace = true, features = ["cargo"] }
hex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
url = { workspace = true, features = ["serde"] }

# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

# Metrics
axum = { workspace = true }
prometheus-client = { workspace = true }
sysinfo = { workspace = true }

# Errors
anyhow = { workspace = true }

# other
parking_lot = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
user = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
proptest = { workspace = true }
proptest-state-machine = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }

[features]
simulation = []
