[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "attestor"
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "attestor"
path = "./src/lib.rs"

[[bin]]
name = "attestor"
path = "./src/main.rs"

[dependencies]
attestor_pool = { path = "../pool" }
common = { path = "../common" }
metrics = { path = "../metrics" }

# Substrate / CC
attestor-primitives = { workspace = true }
bip39 = { version = "2.2.0", features = ["rand", "serde", "zeroize"] }
bls-signatures = { workspace = true }
builder = { workspace = true }
cc-client = { workspace = true }
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }
stream = { workspace = true }
subxt = { workspace = true }
supported-chains-primitives = { workspace = true }
usc-abi-encoding = { workspace = true }

# Ethereum
alloy = { workspace = true, features = ["full"] }
eth = { workspace = true, default-features = true }
write-ability = { workspace = true }

# Async & Parallelism
futures = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true, features = ["url"] }
tokio-util = "0.7"

# P2P
libp2p = { workspace = true, features = [
    "tokio",
    "macros",
    "ed25519",
    "dns",
    "quic",
    "tcp",
    "noise",
    "yamux",
    "identify",
    "ping",
    "mdns",
    "kad",
    "gossipsub",
] }

# Parsing / Config
anyhow = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
hex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
url = { workspace = true, features = ["serde"] }

# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

# Api
axum = { workspace = true }

# Misc
rand = { workspace = true, features = ["std_rng"] }
zeroize = { workspace = true }

[dev-dependencies]
# Anvil bindings for the write-ability end-to-end test (`tests/e2e_anvil.rs`, #[ignore]d; needs
# the `anvil` binary from foundry installed).
alloy-node-bindings = "0.11"
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
