[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "stream_p2p"
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Attestor
common = { path = "../common" }

# Creditcoin
attestor-primitives = { workspace = true, default-features = true }
builder = { workspace = true }

# Substrate
parity-scale-codec = { workspace = true }

# Async & Parallelism
futures = { workspace = true }

# P2P
libp2p = { workspace = true, features = [
    "tokio",
    "macros",
    "ed25519",
    "dns",
    "quic",
    "tcp",
    "noise",
    "yamux",
    "identify",
    "ping",
    "mdns",
    "kad",
    "gossipsub",
] }

# Logging
tracing = { workspace = true }

# Errors
anyhow = { workspace = true }

# other
user = { workspace = true }
