[package]
name = "attestor_pool"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "attestor_pool"
path = "./src/lib.rs"

[dependencies]
attestor-primitives = { workspace = true }
bls-signatures = { workspace = true }
builder = { workspace = true }
cc-client = { workspace = true }
common = { path = "../common" }
parity-scale-codec = { workspace = true }
parking_lot = { workspace = true }
sp-core = { workspace = true }
tracing = { workspace = true }
# `Receiver::recv` uses `tokio::sync::Notify` — needs the `sync` feature, that's it.
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
# cc-client transitively uses `tokio::signal::ctrl_c` but doesn't declare the feature itself
# (it relies on a downstream binary enabling it). Tests run standalone so we enable it here.
tokio = { workspace = true, features = ["signal", "macros", "rt"] }
